# ros2_tutorial_repo

.devcontainer/: rosPkgs.list
biped/: CMakeLists.txt  model.config  setup.py
biped/config/: asmc.yaml  biped.yaml  biped_config.rviz  biped_controller.yaml
biped/dev_test/: effort_pid.py  effort_slider_gui.py  gait_publisher.py
biped/launch/: launch.py
biped/meshes/: base_link.stl  left_femur.stl  left_hip.stl  left_hip1.stl  left_tibia.stl  right_femur.stl  right_hip.stl  right_hip1.stl  right_tibia.stl
biped/src/: controller_switcher.py  effort_asmc.py  effort_pid.py  gait_publisher.py  gait_publsiher  leg_slider_gui.py
biped/urdf/: biped.urdf  biped.urdf.xacro  common.xacro
install/: setup.sh
install/biped/share/biped/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gz_ros2_control/share/gz_ros2_control/: gz_hardware_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gz_ros2_control_demos/lib/gz_ros2_control_demos/: example_ackermann_drive  example_diff_drive  example_effort  example_gripper  example_position  example_tricycle_drive  example_velocity
install/gz_ros2_control_demos/share/gz_ros2_control_demos/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gz_ros2_control_tests/lib/gz_ros2_control_tests/: test_position
install/gz_ros2_control_tests/share/gz_ros2_control_tests/: local_setup.bash  package.sh  (+4 more)
log/: latest_build
(+81 files in other folders)
